design index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+﻿<html lang="EN">
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>HTML Quiz</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <section class="start">
+        <h1>Welcome to this HTML Quiz</h1>
+        <h2>The Test</h2>
+        <p>The test contains 7 questions and there is no time limit.</p>
 
+        <p>The test is not official, it's just a nice way to see how much you know, or don't know, about HTML.</p>
+        <h2>Count Your Score</h2>
+        You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. 75% is required to pass.</p>
+        <hr />
+        <section class="buttons center">
+            <button id="btnStart" class="button blue center">Start Quiz</button>
+        </section>
+    </section>
+
+    <section class="quiz">
+        <header>
+            <div class="quizheader" id="questionnumber"></div><div id="score"></div>
+        </header>
+        <section class="questions" id="question">
+            <form>
+                <fieldset>
+                    <label>HTML Document can contain ______________. 1</label>
+                    <input type="radio" id="cbxa01" name="answers" value="1" />
+                    <label id="cbxa1" for="cbxa01">Attributes</label>
+                    <input type="radio" id="cbxa02" name="answers" value="2" />
+                    <label id="cbxa2" for="cbxa02">Attributes</label>
+                    <input type="radio" id="cbxa03" name="answers" value="3" />
+                    <label id="cbxa3" for="cbxa03">Attributes</label>
+                    <input type="radio" id="cbxa04" name="answers" value="4" />
+                    <label id="cbxa1" for="cbxa04">Attributes</label>
+                </fieldset>
+            </form>
+        </section>
+        <hr />
+        <section class="buttons center">
+            <button id="btnNext" class="button blue">Submit</button>
+            <button id="btnFinish" class="button green">Finish Quiz</button>
+        </section>
+    </section>
+
+    <section class="final">
+        <h2 id="lblMessageHeader">Congratulations!</h2>
+        <h3 id="lblMessageContent">You have passed the quiz</h3>
+        <br />
+        <p id="lblScore">Your score is: 75/100</p>
+        <p id="lblCorrectAns"> correct answers for the mistaken ones</p>
+        <hr />
+        <section class="buttons center">
+            <button id="btnRestart" class="button red center">Restart Quiz</button>
+        </section>
+    </section>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
