--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-﻿<html lang="EN">
+﻿<!DOCTYPE html>
+<html lang="EN">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -24,21 +25,7 @@
         <header>
             <div class="quizheader" id="questionnumber"></div><div id="score"></div>
         </header>
-        <section class="questions" id="question">
-            <form>
-                <fieldset>
-                    <label>HTML Document can contain ______________. 1</label>
-                    <input type="radio" id="cbxa01" name="answers" value="1" />
-                    <label id="cbxa1" for="cbxa01">Attributes</label>
-                    <input type="radio" id="cbxa02" name="answers" value="2" />
-                    <label id="cbxa2" for="cbxa02">Attributes</label>
-                    <input type="radio" id="cbxa03" name="answers" value="3" />
-                    <label id="cbxa3" for="cbxa03">Attributes</label>
-                    <input type="radio" id="cbxa04" name="answers" value="4" />
-                    <label id="cbxa1" for="cbxa04">Attributes</label>
-                </fieldset>
-            </form>
-        </section>
+        <section class="questions" id="question"></section>
         <hr />
         <section class="buttons center">
             <button id="btnNext" class="button blue">Submit</button>
@@ -47,11 +34,11 @@
     </section>
 
     <section class="final">
-        <h2 id="lblMessageHeader">Congratulations!</h2>
-        <h3 id="lblMessageContent">You have passed the quiz</h3>
+        <h2 id="lblMessageHeader"></h2>
+        <h3 id="lblMessageContent"></h3>
         <br />
-        <p id="lblScore">Your score is: 75/100</p>
-        <p id="lblCorrectAns"> correct answers for the mistaken ones</p>
+        <p id="lblScore"></p>
+        <p id="lblCorrectAns"></p>
         <hr />
         <section class="buttons center">
             <button id="btnRestart" class="button red center">Restart Quiz</button>
