--- a/htmlwireframe.html
+++ b/htmlwireframe.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="EN">
 <head>
     <meta charset="utf-8">
@@ -38,14 +38,17 @@
                     <label id='cbxa1' for='cbxa01'>Plain Text</label><br />
                     <input type='radio' id='cbxa01' name='answers' value="4" />
                     <label id='cbxa1' for='cbxa01'>All of These</label><br />
-
                 </fieldset>
             </form>
         </section>
         <hr />
         <section class="buttons center">
-            <button id="btnNext" class="button blue">Submit</button>
+            <button id="btnSubmit" class="button blue">Submit</button>
+            <button id="btnNext" class="button blue">Next</button>
             <button id="btnFinish" class="button green">Finish Quiz</button>
+        </section>
+        <section class="message">
+            <H2 class="lblmsg center" id="lblmsg">Error Message</H2>
         </section>
     </section>
     <section class="final" style="display:block">
