--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
     <section class="start">
-        <h1>Welcome to this HTML Quiz</h1>
-        <h2>The Test</h2>
-        <p>The test contains 7 questions and there is no time limit.</p>
+        <section class="start-container">
+            <section class="start-content">
+                <h1>Welcome to this HTML Quiz</h1>
+                <h2>The Test</h2>
+                <p>The test contains 7 questions and there is no time limit.</p>
 
-        <p>The test is not official, it's just a nice way to see how much you know, or don't know, about HTML.</p>
-        <h2>Count Your Score</h2>
-        <p>You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. 75% is required to pass.</p>
+                <p>The test is not official, it's just a nice way to see how much you know, or don't know, about HTML.</p>
+                <h2>Count Your Score</h2>
+                <p>You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. 75% is required to pass.</p>
+            </section>
+            <section class="start-image">
+                <img src="html5_Logo_512.png" alt="Html5_Logo" class="logo" width="200"/>
+            </section>
+        </section>
         <hr />
         <section class="buttons center">
             <button id="btnStart" class="button blue center">Start Quiz</button>
