bug fixes: - After a user submits an answer, they are able to go and select a different answer. - When the user clicks "Submit", the "Correct/Incorrect" indicator at the top of the screen should update immediately. - On mobile screen sizes, it is very difficult to read the question number and current score. - The for attribute of the <label> elements is not correctly matching up to the id attribute of the <input> elements. - As few global variables should be used as possible. - var should be avoided in favor of using let and const. - The ready function isn't quite correct. $(start()); actually causes start to get invoked before the page is ready;

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </section>
 
     <section class="quiz">
-        <header>
-            <div class="quizheader" id="questionnumber"></div><div id="score"></div>
+        <header class="quizheader">
+            <section class="questionnumber" id="questionnumber"></section>
+            <section class="score" id="score"></section>
         </header>
         <section class="questions" id="question">
             <br />
-
         </section>
         <hr />
         <section class="buttons center">
