--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p>You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. 75% is required to pass.</p>
             </section>
             <section class="start-image">
-                <img src="html5_Logo_512.png" alt="Html5_Logo" class="logo" width="200"/>
+                <img src="HTML5_Logo_512.png" alt="Html5_Logo" class="logo" width="200"/>
             </section>
         </section>
         <hr />
